--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,8 +6,16 @@
 	/* font-family: 'Roboto', sans-serif; */
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	align-items: center;
+}
+
+
 .control{
-	width: 99%;
+	/* width: 99%; */
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 14px;
 	line-height: 1.6em;
@@ -16,12 +24,16 @@
 
 .activo{
 	color: rgb(24, 7, 31);
-	background-color: rgb(0, 255, 34);
+	background-color: #aed6bc;
 }
 
 form{
-	width: 50%;
+	/* min-width: 500px; */
+	max-width: 40%;
+	border: 2px solid #000000;
 }
+
+/* 
 
 table{
 	background: rgb(125, 125, 125);
@@ -37,8 +49,41 @@ td{
 
 tr{
 	width: 70%;
-}
+} */
+
 
 h1{
 	text-align: center;
 }
+
+fieldset{
+	background: rgb(125, 125, 125);
+	border: 1px;
+	width: 100%;
+	padding: 5px;
+}
+
+label{
+	margin-top: 10px;
+	padding-top: 10px;
+}
+
+input{
+  margin-bottom: 10px;
+  width: 100%;
+  height: 30px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+
+div{
+	display: flex;
+	justify-content: center;
+}
+
+button{
+	width: 100px;
+	border-radius: 10px;
+}
+
