--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,89 +1,69 @@
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	/* font-family: "Comic Sans MS", Calibri, sans-serif; */
-	/* font-family: 'Roboto', sans-serif; */
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* font-family: "Comic Sans MS", Calibri, sans-serif; */
+  /* font-family: 'Roboto', sans-serif; */
 }
 
 body {
-	display: flex;
-	flex-direction: column;
-	/* justify-content: center; */
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
 }
 
-
-.control{
-	/* width: 99%; */
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-size: 14px;
-	line-height: 1.6em;
-	background-color: #ffffff;
+.control {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
+  line-height: 1.6em;
+  background-color: #ffffff;
 }
 
-.activo{
-	color: rgb(24, 7, 31);
-	background-color: #aed6bc;
+.activo {
+  color: rgb(24, 7, 31);
+  background-color: #aed6bc;
 }
 
-form{
-	/* min-width: 500px; */
-	max-width: 40%;
-	border: 2px solid #000000;
+form {
+  min-width: 300px;
+	max-width: 700px;
+  width: 80%;
+  border: 2px solid #000000;
 }
 
-/* 
-
-table{
-	background: rgb(125, 125, 125);
-	border: 1px;
-	width: 100%;
-	padding: 5px;
-	margin: 20px;
+h1 {
+  text-align: center;
 }
 
-td{
-	width: 30%;
-}
-
-tr{
-	width: 70%;
-} */
-
-
-h1{
-	text-align: center;
-}
-
-fieldset{
-	background: rgb(125, 125, 125);
-	border: 1px;
-	width: 100%;
-	padding: 5px;
-}
-
-label{
-	margin-top: 10px;
-	padding-top: 10px;
-}
-
-input{
-  margin-bottom: 10px;
-  width: 100%;
-  height: 30px;
+fieldset {
+  background: rgb(125, 125, 125);
+  border: 1px;
   padding: 5px;
-  border-radius: 5px;
 }
 
-
-div{
-	display: flex;
-	justify-content: center;
+.data,
+.btn {
+  display: flex;
+  justify-content: start;
+  margin-top: 10px;
+  width: 100%;
 }
 
-button{
-	width: 100px;
-	border-radius: 10px;
+label {
+  width: 25%;
+  text-align: end;
+  padding-right: 10px;
+}
+input {
+  width: 70%;
 }
 
+button {
+  width: 100px;
+  border-radius: 10px;
+}
+
+.btn {
+  justify-content: center;
+}
